{{$NEXT}}

0.40     2016-01-30

- Fixed the stringification of some headers with regards to encoding. The
  Received header should never be encoded (and thus should never contain
  non-ASCII).

- Fixed headers which contain email addresses (To, From, CC) so that email
  addresses are properly encoded (I think). The phrase and comment portions of
  the address can contain encoded-words, but the address itself should never
  be encoded. Note that per RFC6531 addresses may contain UTF-8, but the MTA
  must support the SMTPUTF8 extension in order for the mail to be
  delivered. As of this release, SMTPUTF8 support does not appear to be very
  widespread, so I would strongly discourage the use of UTF-8 in email
  addresses!


0.39     2015-08-04

- Changed Email::Abstract::Courriel's ->get_body() method to return the entire
  email as a string, making it equivalent to ->as_string(). This is confusing,
  but looking at the few instances of code in Email::Transport that call
  ->get_body(), it seems like that's what this method is expected to
  do. Reported by Greg Oschwald. RT #106176.


0.38     2015-08-04

- Somewhat screwy release now deleted from PAUSE.


0.37     2015-02-26

- Fixed a test failure when MooseX::Params::Validate 0.21+ is
  installed. Reported by Slaven Rezic. RT #102382.


0.36     2014-08-15

- Trying to build an email with a header that started with a space caused the
  header value to be dropped entirely from the generated email. Patch by Greg
  Oschwald. PR #2.


0.35     2014-05-12

- Replaced all uses of File::Slurp with File::Slurp::Tiny. See RT #95479 for
  the initial bug report and discussion on why File::Slurp should not be used.


0.34     2014-05-02

- More test fixes - relax the date parsing more.


0.33     2014-04-19

- Fixed tests so they pass with the most recent DateTime::Format::Mail (0.400)
  as well as older versions.


0.32     2014-04-19

- Courriel parsing is now more liberal and will accept an email with mixed